--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,7 @@
                         <li><a href="/partners/new">New partner</a></li>
                         <% if(currentUser){ %>
                             <li><a href="/logout">Logout</a></li>
+                            <li><a href="/register">Register</a></li>
                         <% }else{ %>
                             <li><a href="/login">Login</a></li>
                         <% } %>
