--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,13 +5,25 @@
     <div class="row">
         <h1 style="text-align: center">Sign up</h1>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/register" method="POST">
+            <form action="/register" method="POST" id="registerform">
                 <div class="form-group">
                     <input class="form-control" type="text" name="username" placeholder="username">
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="password" name="password" placeholder="password">
                 </div>
+                
+                <div class="form-group">
+                    <label for="partner">Partner</label>
+                        <select name="partner" form="registerform" class="form-control" id="partner">
+                            <% partners.forEach(function(partner){ %>
+                                <% if(partner.status){ %>
+                                    <option value="<%= partner.name %>"><%= partner.name %></option>
+                                <% } %>
+                            <% }) %>
+                        </select>
+                </div>
+                
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">Sign up</button>
                 </div>
