--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row row-centered">
-        <h1 class="text-center">ADMIN-page</h1>
+        <h1 class="text-center">Log in</h1>
         <div class="col-lg-6 col-md-8 col-xs-10 col-centered">
             <form action="/login" method="POST">
                 <div class="form-group">
