--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,13 +16,18 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/posts">Posts</a></li>
-                        <li><a href="/partners">Partners</a></li>
-                        <li><a href="/posts/new">New post</a></li>
-                        <li><a href="/partners/new">New partner</a></li>
                         <% if(currentUser){ %>
+                            <li><a href="#">Logged in as <b><%=currentUser.username %></b></a></li>
+                            <% if(currentUser.admin === true){ %>
+                                <li><a href="/posts">Posts</a></li>
+                                <li><a href="/partners">Partners</a></li>
+                                <li><a href="/posts/new">New post</a></li>
+                                <li><a href="/partners/new">New partner</a></li>
+                                <li><a href="/register">Register</a></li>
+                            <% }else{ %>
+                                <li><a href="/<%= currentUser._id %>/overzicht">Overzicht</a></li>
+                            <% } %>
                             <li><a href="/logout">Logout</a></li>
-                            <li><a href="/register">Register</a></li>
                         <% }else{ %>
                             <li><a href="/login">Login</a></li>
                         <% } %>
@@ -30,6 +35,8 @@
                 </div>
             </div>
         </nav>
+        
+        
         <div class="container">
             <% if(succes && succes.length > 0){ %>
                 <div class="alert alert-success" role="alert">
