--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <% if(currentUser){ %>
-                            <li><a href="#">Logged in as <b><%=currentUser.username %></b></a></li>
+                            <li><a href="/partners/<%= currentUser._id %>/overzicht">Welcome <b><%=currentUser.username %></b></a></li>
                             <% if(currentUser.admin === true){ %>
                                 <li><a href="/posts">Posts</a></li>
                                 <li><a href="/partners">Partners</a></li>
@@ -25,7 +25,7 @@
                                 <li><a href="/partners/new">New partner</a></li>
                                 <li><a href="/register">Register</a></li>
                             <% }else{ %>
-                                <li><a href="/<%= currentUser._id %>/overzicht">Overzicht</a></li>
+                                <li><a href="/partners/<%= currentUser._id %>/overzicht">Overzicht</a></li>
                             <% } %>
                             <li><a href="/logout">Logout</a></li>
                         <% }else{ %>
