--- a/views/partner.ejs
+++ b/views/partner.ejs
@@ -71,7 +71,7 @@
         </div> 
         
         <!-- Pictures of the posts -->
-        <header class="jumbotron">
+        <header class="jumbotron" id="postsFotos">
              <h2>Alle gemaakte posts</h2>
         </header>
         <div class="row text-center" style="display:flex; flex-wrap: wrap;">
