added admin register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,6 +19,7 @@
                             <% partners.forEach(function(partner){ %>
                                     <option value="<%= partner.name %>"><%= partner.name %></option>
                             <% }) %>
+                            <option value="admin">ADMIN</option>
                         </select>
                 </div>
                 
