--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,6 +12,9 @@
                 <div class="form-group">
                     <input class="form-control" type="password" name="password" placeholder="password">
                 </div>
+                <div class="form-group">
+                    <input class="form-control" type="password" name="confirmPassword" placeholder="confirm password">
+                </div>
                 
                 <div class="form-group">
                     <label for="partner">Partner</label>
